--- a/index.html
+++ b/index.html
@@ -5,210 +5,213 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberShop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <nav>
-            <img src="./images/logo.svg" alt="Логотип сайта">
-            <ul>
-                <li><a href="./">О нас</a></li>
-                <li><a href="">Услуги и цены</a></li>
-                <li><a href="">Мастера</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="nav">
+            <a href="" class="logo-link"><img class="logo-img" src="./images/logo.svg" alt="Логотип сайта"></a>
+            <ul class="nav-list list">
+                <li class="nav-item"><a class="nav-link current link" href="./">О нас</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Услуги и цены</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Мастера</a></li>
+                <li class="nav-item"><a class="nav-link link" hr class="nav-item"ef="">Контакты</a></li>
             </ul>
 
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <button type="button">онлайн-запись</button>
+            <a class="nav-link link" href="tel:+380441111111">+38 044 111 11 11</a>
+            <button class="button" type="button">онлайн-запись</button>
         </nav>
     </header>
     
     <!-- Main -->
     <main>
         <!-- Hero section -->
-        <section>
-            <ul>
-                <li><a href="">Instagam</a></li>
-                <li><a href="">Youtube</a></li>
+        <section class="hero">
+            <ul class="hero-list list">
+                <li class="hero-item"><a class="hero-link link" href="">Instagam</a></li>
+                <li class="hero-item"><a class="hero-link link" href="">Youtube</a></li>
             </ul>
 
-            <div>
-                <p lang="en">A hair salon for men in Kyiv</p>
-                <h1 lang="en">BarberShop</h1>
-                <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
+            <div class="hero-right">
+                <p class="pre-title" lang="en">A hair salon for men in Kyiv</p>
+                <h1 class="hero-title title" lang="en">BarberShop</h1>
+                <p class="after-title">Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
             </div>
         </section>
 
         <!-- Ubout us section -->
-        <section>
-            <ul>
-                <li><img src="./images/about-us-img1.jpg" alt="Барбер бреет бороду" width="270" height="430"></li>
-                <li><img src="./images/about-us-img2.jpg" alt="Балбер делает стрижку" width="270" height="430"></li>
+        <section class="about">
+            <ul class="about-list list">
+                <li class="about-item"><img class="about-img" src="./images/about-us-img1.jpg" alt="Барбер бреет бороду" width="270" height="430"></li>
+                <li class="about-item"><img class="about-img" src="./images/about-us-img2.jpg" alt="Балбер делает стрижку" width="270" height="430"></li>
             </ul>
 
-            <div>
-                <p>О НАС</p>
-                <h2>Лучший Барбершоп твоего города</h2>
-                <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
-                <p>Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!</p>
-                <button type="button">онлайн-запись</button>
+            <div class="about-right">
+                <p class="pre-title">О НАС</p>
+                <h2 class="title">Лучший Барбершоп твоего города</h2>
+                <p class="after-title">Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+                <p class="about-text">Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам приходит!</p>
+                <button class="button" type="button">онлайн-запись</button>
             </div>
         </section>
 
         <!-- Prices section -->
-        <section>
-            <p>Проведи время в компании лучших мастеров</p>
-            <h2>Услуги и цены</h2>
-
-            <ul>
-                <li>
-                    <p>Мужская стрижка</p>
-                    <span>от 300 грн.</span>
+        <section class="prices">
+            <p class="pre-title">Проведи время в компании лучших мастеров</p>
+            <h2 class="title">Услуги и цены</h2>
+            <ul class="prices-list list">
+                <li class="prices-item">
+                    <p class="prices-service">Мужская стрижка</p>
+                    <span class="prices-price">от 300 грн.</span>
                 </li>
-                <li>
-                    <p>Стрижка бороды</p>
-                    <span>от 200 грн.</span>
+                <li class="prices-item">
+                    <p class="prices-service">Стрижка бороды</p>
+                    <span class="prices-price">от 200 грн.</span>
                 </li>
-                <li>
-                    <p>Стрижка усов</p>
-                    <span>от 200 грн.</span>
+                <li class="prices-item">
+                    <p class="prices-service">Стрижка усов</p>
+                    <span class="prices-price">от 200 грн.</span>
                 </li>
-                <li>
-                    <p>Бритье опасной бритвой</p>
-                    <span>от 200 грн.</span>
-                </li>
-            </ul>
-
-            <ul>
-                <li>
-                    <p>Cтрижка у стажера</p>
-                    <span>от 50 грн.</span>
-                </li>
-                <li>
-                    <p>Стрижка под насадку</p>
-                    <span>от 200 грн.</span>
-                </li>
-                <li>
-                    <p>Детская стрижка (до 12 лет)</p>
-                    <span>от 300 грн.</span>
-                </li>
-                <li>
-                    <p>Камуфлирование седины</p>
-                    <span>от 200 грн.</span>
+                <li class="prices-item">
+                    <p class="prices-service">Бритье опасной бритвой</p>
+                    <span class="prices-price">от 200 грн.</span>
                 </li>
             </ul>
 
-            <button type="button">онлайн-запись</button>
+            <ul class="prices-list list">
+                <li class="prices-item">
+                    <p class="prices-service">Cтрижка у стажера</p>
+                    <span class="prices-price">от 50 грн.</span>
+                </li>
+                <li class="prices-item">
+                    <p class="prices-service">Стрижка под насадку</p>
+                    <span class="prices-price">от 200 грн.</span>
+                </li>
+                <li class="prices-item">
+                    <p class="prices-service">Детская стрижка (до 12 лет)</p>
+                    <span class="prices-price">от 300 грн.</span>
+                </li>
+                <li class="prices-item">
+                    <p class="prices-service">Камуфлирование седины</p>
+                    <span class="prices-price">от 200 грн.</span>
+                </li>
+            </ul>
+
+            <button class="button" type="button">онлайн-запись</button>
         </section>
 
         <!-- Advantages section -->
-        <section>
-            <ul>
-                <li>
-                    <span>600</span>
-                    <p>Довольных клиентов в день</p>
+        <section class="advantages">
+            <ul class="advantages-list list">
+                <li class="advantages-item">
+                    <span class="advantages-count">600</span>
+                    <p class="advantages-description">Довольных клиентов в день</p>
                 </li>
-                <li>
-                    <span>50</span>
-                    <p>Наград за отличный сервис</p>
+                <li class="advantages-item">
+                    <span class="advantages-count">50</span>
+                    <p class="advantages-description">Наград за отличный сервис</p>
                 </li>
-                <li>
-                    <span>20</span>
-                    <p>Лучших мастеров Киева</p>
+                <li class="advantages-item">
+                    <span class="advantages-count">20</span>
+                    <p class="advantages-description">Лучших мастеров Киева</p>
                 </li>
-                <li>
-                    <span>100</span>
-                    <p>Подарков постоянным клиентам</p>
+                <li class="advantages-item">
+                    <span class="advantages-count">100</span>
+                    <p class="advantages-description">Подарков постоянным клиентам</p>
                 </li>
             </ul>
 
-            <div>
-                <p>старая традиционная школа</p>
-                <h2>Почему приходят именно к нам?</h2>
-                <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
+            <div class="advantages-right">
+                <p class="pre-title">старая традиционная школа</p>
+                <h2 class="title">Почему приходят именно к нам?</h2>
+                <p class="after-title">О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
             </div>
         </section>
 
         <!-- Team section -->
-        <section>            
-            <p>для настоящих ценителей атмосферы</p>
-            <h2>Наши мастера</h2>
+        <section class="team">            
+            <p class="pre-title">для настоящих ценителей атмосферы</p>
+            <h2 class="title">Наши мастера</h2>
 
-            <ul>
-                <li>
-                    <img src="./images/team-img1.jpg" alt="John Smith" width="370" height="346">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li><a href="" aria-label="Instagram">Instagram</a></li>
-                        <li><a href="" aria-label="Twitter">Twitter</a></li>
-                        <li><a href="" aria-label="Facebook">Facebook</a></li>
-                        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img class="team-photo" src="./images/team-img1.jpg" alt="John Smith" width="370" height="346">
+                    <h3 class="team-name">John Smith</h3>
+                    <p class="team-position">Extreme Barber</p>
+                    <ul class="team-social-list list">
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Instagram">Instagram</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Twitter">Twitter</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Facebook">Facebook</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a></li>
                     </ul>
                 </li>
-                <li>
-                    <img src="./images/team-img2.jpg" alt="Michele Doe" width="370" height="346">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li><a href="" aria-label="Instagram">Instagram</a></li>
-                        <li><a href="" aria-label="Twitter">Twitter</a></li>
-                        <li><a href="" aria-label="Facebook">Facebook</a></li>
-                        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                <li class="team-item">
+                    <img class="team-photo" src="./images/team-img2.jpg" alt="Michele Doe" width="370" height="346">
+                    <h3 class="team-name">Michele Doe</h3>
+                    <p class="team-position">Extreme Barber</p>
+                    <ul class="team-social-list list">
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Instagram">Instagram</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Twitter">Twitter</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Facebook">Facebook</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a></li>
                     </ul>
                 </li>
-                <li>
-                    <img src="./images/team-img3.jpg" alt="Alan Black" width="370" height="346">
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li><a href="" aria-label="Instagram">Instagram</a></li>
-                        <li><a href="" aria-label="Twitter">Twitter</a></li>
-                        <li><a href="" aria-label="Facebook">Facebook</a></li>
-                        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                <li class="team-item">
+                    <img class="team-photo" src="./images/team-img3.jpg" alt="Alan Black" width="370" height="346">
+                    <h3 class="team-name">Alan Black</h3>
+                    <p class="team-position">Extreme Barber</p>
+                    <ul class="team-social-list list">
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Instagram">Instagram</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Twitter">Twitter</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="Facebook">Facebook</a></li>
+                        <li class="team-social-item"><a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a></li>
                     </ul>
                 </li>
             </ul>
         </section>
 
         <!-- Gallery section -->
-        <section>
-            <h2 hidden>Галерея работ</h2>
-            <p>На латинском языке “барба” означает “борода”</p>
+        <section class="gallery">
+            <h2 class="visually-hidden">Галерея работ</h2>
+            <p class="pre-title">На латинском языке “барба” означает “борода”</p>
 
-            <ul>
-                <li><img src="./images/gallery-image1.jpg" alt="Фото 1 из галереи" width="270" height="360"></li>
-                <li><img src="./images/gallery-image2.jpg" alt="Фото 2 из галереи" width="270" height="360"></li>
-                <li><img src="./images/gallery-image3.jpg" alt="Фото 3 из галереи" width="270" height="360"></li>
-                <li><img src="./images/gallery-image4.jpg" alt="Фото 4 из галереи" width="270" height="360"></li>
+            <ul class="gallery-list list">
+                <li class="gallery-item"><img class="gallery-img" src="./images/gallery-image1.jpg" alt="Фото 1 из галереи" width="270" height="360"></li>
+                <li class="gallery-item"><img class="gallery-img" src="./images/gallery-image2.jpg" alt="Фото 2 из галереи" width="270" height="360"></li>
+                <li class="gallery-item"><img class="gallery-img" src="./images/gallery-image3.jpg" alt="Фото 3 из галереи" width="270" height="360"></li>
+                <li class="gallery-item"><img class="gallery-img" src="./images/gallery-image4.jpg" alt="Фото 4 из галереи" width="270" height="360"></li>
             </ul>
         </section>
 
-        <!-- ??? section -->
-        <section>
-            <h2>Онлайн-запись</h2>
-            <button type="button">отправить</button>
+        <!-- Online section -->
+        <section class="online">
+            <h2 class="title">Онлайн-запись</h2>
+            <button class="button" type="button">отправить</button>
         </section>
 
         <!-- Contacts section -->
-        <section>
-            <h2>Контакты</h2>
-            <address>ул. Васильковая, 7А Киев, 08132</address>
-             <ul>
-                <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+        <section class="contacts">
+            <h2 class="title">Контакты</h2>
+            <address class="contacts-address">ул. Васильковая, 7А Киев, 08132</address>
+             <ul class="contacts-list list">
+                <li list="contacts-item"><a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                <li list="contacts-item"><a class="contacts-link link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
              </ul>
-             <p>время работы</p>
-             <p>Ежедневно с 9:00 до 22:00</p>
+             <p class="pre-title">время работы</p>
+             <p class="contacts-time-work">Ежедневно с 9:00 до 22:00</p>
         </section>
     </main>
     
     <!-- Footer -->
-    <footer>
-        <p>&copy; Copyright 2020</p>
-        <ul>
-            <li><a href="">Instagam</a></li>
-            <li><a href="">Youtube</a></li>
+    <footer class="footer">
+        <p class="footer-copy">&copy; Copyright 2020</p>
+        <ul class="footer-list list">
+            <li class="footer-item"><a class="footer-link link" href="">Instagam</a></li>
+            <li class="footer-item"><a class="footer-link link" href="">Youtube</a></li>
         </ul>
     </footer>
 </body>
