--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav class="nav">
             <a href="" class="logo-link"><img class="logo-img" src="./images/logo.svg" alt="Логотип сайта"></a>
             <ul class="nav-list list">
-                <li class="nav-item"><a class="nav-link current link" href="./">О нас</a></li>
+                <li class="nav-item"><a class="nav-link link" href="./">О нас</a></li>
                 <li class="nav-item"><a class="nav-link link" href="">Услуги и цены</a></li>
                 <li class="nav-item"><a class="nav-link link" href="">Мастера</a></li>
-                <li class="nav-item"><a class="nav-link link" hr class="nav-item"ef="">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
             </ul>
 
             <a class="nav-link link" href="tel:+380441111111">+38 044 111 11 11</a>
@@ -198,8 +198,8 @@
             <h2 class="title">Контакты</h2>
             <address class="contacts-address">ул. Васильковая, 7А Киев, 08132</address>
              <ul class="contacts-list list">
-                <li list="contacts-item"><a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
-                <li list="contacts-item"><a class="contacts-link link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                <li class="contacts-item"><a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                <li class="contacts-item"><a class="contacts-link link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
              </ul>
              <p class="pre-title">время работы</p>
              <p class="contacts-time-work">Ежедневно с 9:00 до 22:00</p>
