--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <!-- Prices section -->
             <section class="prices">
-                <div class="container">
+                <div class="container prices-container">
                     <p class="pre-title">Проведи время в компании лучших мастеров</p>
                     <h2 class="title prices-title">Услуги и цены</h2>
                     <div class="prices-lists">
@@ -135,7 +135,7 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="button" type="button">онлайн-запись</button>
+                    <button class="button prices-button" type="button">онлайн-запись</button>
                 </div>
             </section>
 
@@ -171,7 +171,7 @@
 
             <!-- Team section -->
             <section class="team">
-                <div class="container">
+                <div class="container team-container">
                     <p class="pre-title">для настоящих ценителей атмосферы</p>
                     <h2 class="title">Наши мастера</h2>
 
@@ -182,16 +182,32 @@
                             <p class="team-position">Extreme Barber</p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Instagram">Instagram</a>
+                                    <a class="team-social-link link" href="" aria-label="Instagram">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Twitter">Twitter</a>
+                                    <a class="team-social-link link" href="" aria-label="Twitter">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Facebook">Facebook</a>
+                                    <a class="team-social-link link" href="" aria-label="Facebook">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a>
+                                    <a class="team-social-link link" href="" aria-label="LinkedIn">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -201,16 +217,32 @@
                             <p class="team-position">Extreme Barber</p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Instagram">Instagram</a>
+                                    <a class="team-social-link link" href="" aria-label="Instagram">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Twitter">Twitter</a>
+                                    <a class="team-social-link link" href="" aria-label="Twitter">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Facebook">Facebook</a>
+                                    <a class="team-social-link link" href="" aria-label="Facebook">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a>
+                                    <a class="team-social-link link" href="" aria-label="LinkedIn">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -220,16 +252,32 @@
                             <p class="team-position">Extreme Barber</p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Instagram">Instagram</a>
+                                    <a class="team-social-link link" href="" aria-label="Instagram">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Twitter">Twitter</a>
+                                    <a class="team-social-link link" href="" aria-label="Twitter">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="Facebook">Facebook</a>
+                                    <a class="team-social-link link" href="" aria-label="Facebook">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-social-link link" href="" aria-label="LinkedIn">LinkedIn</a>
+                                    <a class="team-social-link link" href="" aria-label="LinkedIn">
+                                        <svg width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -261,7 +309,7 @@
             </section>
 
             <div class="online-contacts">
-                <div class="container online-contacts-container">
+                <div class="online-contacts-container">
                     <!-- Online section -->
                     <section class="online">
                         <h2 class="title">Онлайн-запись</h2>
@@ -271,13 +319,24 @@
                     <!-- Contacts section -->
                     <section class="contacts">
                         <h2 class="title">Контакты</h2>
-                        <address class="contacts-address">ул. Васильковая, 7А Киев, 08132</address>
+                        <address class="contacts-address">
+                            <a href="" class="contacts-link link">
+                                <svg class="contacts-icon" width="24" height="24"><use href="./images/icons.svg#address"></use></svg>
+                                ул. Васильковая, 7А Киев, 08132
+                            </a>
+                        </address>
                         <ul class="contacts-list list">
                             <li class="contacts-item">
-                                <a class="contacts-link link" href="tel:+380441111111">+38 044 111 11 11</a>
+                                <a class="contacts-link link" href="tel:+380441111111">
+                                    <svg class="contacts-icon" width="24" height="24"><use href="./images/icons.svg#phone"></use></svg>
+                                    +38 044 111 11 11</a
+                                >
                             </li>
                             <li class="contacts-item">
-                                <a class="contacts-link link" href="mailto:barbershop@email.com">barbershop@email.com</a>
+                                <a class="contacts-link link" href="mailto:barbershop@email.com">
+                                    <svg class="contacts-icon" width="24" height="24"><use href="./images/icons.svg#mail"></use></svg>
+                                    barbershop@email.com</a
+                                >
                             </li>
                         </ul>
                         <p class="pre-title">время работы</p>
